--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,14 @@ dependencies:
   flutter_config: ^2.0.2
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
-  build_runner: ^2.4.13
+  floor: ^1.5.0
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^1.5.0
+  build_runner: ^2.4.13
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
