--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_serializable: ^6.8.0
   floor: ^1.5.0
   sqflite: ^2.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
